# SelectZyme

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  conda-lock.yml  db_creation.py  embed.py  environment.yml  environment_docker.yml  gpumap.py  minimal_example.ipynb  preprocessing.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_frozen.txt  requirements_pip_conda_docker.txt  setup.py
.github/workflows/: python-app.yml  python-app_uv.yml
assets/: eda.html
pages/: callbacks.py  dimred.py  eda.py  mst.py  single_linkage.py  slc_centroid.py
results/: test_config.yml
results/input_configs/: test_config.yml
selectzyme/: app.py  main.py  minimal_example.ipynb
selectzyme/backend/: customizations.py  embed.py  ml.py  ncbi_taxonomy_resolver.py  parsing.py  preprocessing.py  utils.py  vector_db.py
selectzyme/frontend/: mst_plotting.py  single_linkage_plotting.py  visualizer.py
selectzyme/pages/: callbacks.py  dimred.py  eda.py  mst.py  single_linkage.py  slc_centroid.py
selectzyme/tests/: test_fetch_data_uniprot.py  test_ml.py  test_mst_plotting.py  test_ncbi_taxonomy_browser.py  test_parsing.py  test_preprocessing.py  test_single_linkage_plotting.py  test_vector_db.py
src/: app.py  customizations.py  dash_app.py  dash_app_network.py  db_creation.py  embed.py  fetch_data_uniprot.py  gpumap.py  hdbscan_plotting.py  load_uniprot_embeddings.py  logic.py  main.py  ml.py  mst_plotting.py  ncbi_taxonomy_resolver.py  parsing.py  phylogenetic_tree.py  phylogenetic_tree_circular.py  preprocessing.py  single_linkage_plotting.py  statistical_analysis.py  utils.py  vector_db.py  visualizer.py
src/pages/: callbacks.py  dimred.py  eda.py  mst.py  single_linkage.py  slc_centroid.py
src/selectzyme/: customizations.py  embed.py  main.py  ml.py  mst_plotting.py  single_linkage_plotting.py  utils.py  vector_db.py  visualizer.py
src/tests/: head_10.fasta  head_10.tsv  test_embed.py  test_fetch_data_uniprot.py  test_ml.py  test_mst_plotting.py  test_ncbi_taxonomy_browser.py  test_parsing.py  test_preprocessing.py  test_single_linkage_plotting.py  test_utils_parsing.py  test_vector_db.py  test_visualizer.py
tests/: head_10.fasta  head_10.tsv  test_cuml_usage.py  test_customizations.py  test_customizations_ncbi_taxonomy_browser.py  test_embed.py  test_fetch_data_uniprot.py  test_ml.py  test_mst_plotting.py  test_ncbi_taxonomy_browser.py  test_parsing.py  test_preprocessing.py  test_single_linkage_plotting.py  test_stack.py  test_uniprot_embeddings_visualization.py  test_utils.py  test_utils_parsing.py  test_vector_db.py  test_visualizer.py  try_uniprot_embeddings_visualization.py
