[project]
name = "ec"
version = "v0.0.1"
description = "Selectzyme: Interactive Protein Space Visualization for Enzyme Discovery, Selection, and Mining"
readme = "README.md"
authors = [
    { name = "Felix Moorhoff", email = "fmoorhof@ipb-halle.de" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.10"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }  # extra-index-url are defined in [build]


[project.urls]
"Homepage" = "https://github.com/fmoorhof/ec"
"Repository" = "https://github.com/fmoorhof/ec"
"Documentation" = "https://fmoorhof.github.io/fmoorhof/ec"
"Bug Tracker" = "https://github.com/fmoorhof/ec/-/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

# todo: not working yet. install manually!
# either pip reads this
extra-index-url = ["https://download.pytorch.org/whl/cu118", "https://pypi.nvidia.com"]  # Pytorch, RAPIDS
# or this
[tool.env]
PIP_EXTRA_INDEX_URL = [
    "https://download.pytorch.org/whl/cu118",
    "https://pypi.nvidia.com"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
full = [
    "conda-lock",
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = "src/"
filterwarnings = [
    "ignore:.*pkg_resources.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "def __repr__(self):",
    # re-enable the standard pragma
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING",
]
precision = 2

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "FA",  # flake8-future-annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]